# user-account-service

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.prod  README.md  docker-compose-test.yml  docker-compose.yml  pyproject.toml  requirements.txt  run.py
.github/workflows/: reusable-ci.yaml  sast.yaml  template.yaml  user-service.yaml  zap.yaml
.github/workflows/cd/: azure_deployment.yml  docker-publish.yml
.github/workflows/ci/: ci.yml
K8s/: db-deployment.yaml  db-pv.yaml  db-pvc.yaml  deployment.yaml  mysql-deployment.yaml  mysql-pvc.yaml  redis-deployment.yaml  user-deployment.yaml
src/user_service/: main.py
src/user_service/extensions/: redis_client.py
src/user_service/models/: user_db.py
src/user_service/resources/: user.py
src/user_service/schemas/: user_schema.py
tests/unit/: conftest.py  test_blocklist.py  test_main.py
tests/unit/extensions/: test_db.py  test_redis_client.py
tests/unit/models/: test_user_db.py
tests/unit/resources/: test_user.py
tests/unit/schemas/: test_user_schema.py
user_service/: Dockerfile  Dockerfile_multi_stage  docker-compose-aws.yml  docker-compose-dev.yml  main.py  requirements.txt  run.py
user_service/src/user_service/data/: user_data.db
user_service/src/user_service/models/: user_db.py
user_service/src/user_service/resources/: user.py
