[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "user-service"
version = "0.1.0"
description = "Flask-based user account service"
authors = [
    { name = "Rahul Sharma" }
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "flask-smorest",
    "flask_sqlalchemy",
    "Flask==2.3.2",
    "gunicorn>=22.0.0",
    "Werkzeug>=2.3.0,<3.0",
    "Jinja2==3.1.2",
    "marshmallow==3.19.0",
    "packaging==23.1",
    "Pillow>=11.0.0",
    "python-dotenv==1.0.0",
    "passlib~=1.7.4",
    "requests==2.31.0",
    "redis~=4.5.0",
    "flask-cors~=3.0.10",
    "flask-jwt-extended~=4.5.2",
    "sqlalchemy>=2.0.36",
    "pandas~=2.2.3",
    "attrs~=25.3.0",
    "PySocks~=1.7.1",
    "filelock~=3.16.0",
    "alembic~=1.7.7",
    "typing_extensions~=4.12.2",
    "pymysql>=1.1.1",
    "cryptography~=41.0.0",
    "build>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "flake8>=7.0.0",
    "pytest~=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-bdd>=7.3.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
addopts = []

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "^\\s*@abstractmethod",
    "^\\s*pass\\s*$",
]

[tool.coverage.html]
directory = "htmlcov"